package core.Drone.domain.Entities;

public class Drone {
}
