package core.Drone.domain.ValueObjects;

public class SerialNumber {
}
