package core.Figure.application.Service;

public class DSLValidate {
}
