package core.Figure.domain.Entities;

public class Figure {
}
