package core.Figure.domain.ValueObjects;

public class DSLDescription {
}
