package core.Figure.domain.ValueObjects;

public enum FigureStatus {
}
