package core.ModelOfDrone.domain.ValueObjects;

public enum SafetyStatus {
}
