package core.ModelOfDrone.domain.ValueObjects;

public class WindSpeed {
}
