package core.ModelOfDrone.domain.ValueObjects;

public class WindTolerance {
}
