package core.ShowProposal.domain.Entities;

public class ShowProposal {
}
