package core.ShowProposal.domain.ValueObjects;

public enum ShowProposalStatus {
}
